[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Noto_Sans_KR/NotoSansKR-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Noto_Sans_KR/NotoSansKR-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Quiz.gd" type="Script" id=3]
[ext_resource path="res://Sounds/619834__eponn__correct-menu-game-android.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/587253__beetlemuse__dats-wrong.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[node name="Quiz" type="Node2D"]
pause_mode = 2
visible = false
z_index = 3
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 40.8883
margin_top = 28.5543
margin_right = 286.888
margin_bottom = 146.554
color = Color( 0.490196, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="Button" parent="."]
margin_left = 49.3969
margin_top = 86.5874
margin_right = 154.397
margin_bottom = 106.587
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Answer1"]
margin_right = 105.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "testtest testkfjsdfsldfsldf"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Answer2" type="Button" parent="."]
margin_left = 164.203
margin_top = 86.0511
margin_right = 269.203
margin_bottom = 106.051
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Answer2"]
margin_right = 105.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "testtest testkfjsdfsldfsldf"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Answer3" type="Button" parent="."]
margin_left = 48.5796
margin_top = 115.903
margin_right = 153.58
margin_bottom = 135.903
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Answer3"]
margin_right = 105.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "testtest testkfjsdfsldfsldf"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Answer4" type="Button" parent="."]
margin_left = 164.326
margin_top = 114.842
margin_right = 269.326
margin_bottom = 134.842
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Answer4"]
margin_right = 105.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "testtest testkfjsdfsldfsldf"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="."]
margin_left = 81.4322
margin_top = 41.2432
margin_right = 242.432
margin_bottom = 80.2432
custom_fonts/font = SubResource( 3 )
text = "fsfsdfsdkfjsfskldfsf
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="IncorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 4.039
pitch_scale = 1.97

[connection signal="visibility_changed" from="." to="." method="_on_Quiz_visibility_changed"]
[connection signal="pressed" from="Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="Answer4" to="." method="_on_Answer4_pressed"]
